--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,7 +6,7 @@
                 template="/WEB-INF/layouts/main.xhtml">
 
     <h:head>
-        <!-- Agregar recursos necesarios para PrimeFaces -->
+        <!-- resources -->
         <h:outputStylesheet library="webjars" name="primeflex/3.3.1/primeflex.min.css" />
         <h:outputScript library="primefaces" name="jquery/jquery.js"/>
         <h:outputScript library="primefaces" name="primefaces.js"/>
