--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -7,7 +7,7 @@
     <!-- Defines the page layout using the main template -->
 
     <h:head>
-        <!-- Agregar recursos necesarios para PrimeFaces -->
+        <!-- resources -->
         <h:outputStylesheet library="webjars" name="primeflex/3.3.1/primeflex.min.css" />
         <h:outputScript library="primefaces" name="jquery/jquery.js"/>
         <h:outputScript library="primefaces" name="primefaces.js"/>
